2005-05-07  Richard Spindler <richard.spindler AT gmail.com>

2005-05-06  Richard Spindler <richard.spindler AT gmail.com>

 * Some Automake-Magic added to install help files
 * Integrated SoundTouch and portaudio int Sourc-Tree
 * A Fix to work around a wx26 Misfeature or Bug? (Dial in Trimmer dialog
 grabs focus)

2005-04-18  Richard Spindler <richard.spindler AT gmail.com>

 * Some Fixes (Copy Sample, keep Filename on package Export)
 * various fixes were made over the last days, but I'm to lasy to record all
 of them :P

2005-04-06  Richard Spindler <richard.spindler AT gmail.com>

 * Fixed win32 Redraw Errors

2005-03-14  Richard Spindler <richard.spindler AT gmail.com>

 * Set a minimum Size for Trimming
 * Fixed Timeline Rendering Artefact
 * Fixed Ruler Reset Artefact
 * Fixed Missing Filename in Window Title on "Load last File"
 * Fixed Enable/Disable of Undo/Redo Buttons+Menu
 * Fixed Propagate Tree-Path to Colour-Preferences

2005-03-11  Richard Spindler <richard.spindler AT gmail.com>

 * Made Ruler to snap to the Grid
 * Updated TinyXML to Version 2.3.3
 * Saving of Envelope, Trim and Stretch works now

2005-03-06  Richard Spindler <richard.spindler AT gmail.com>

 * Changed lots of internal stuff, to fix the Trimmer, Envelope, etc..

2005-02-28  Richard Spindler <richard.spindler AT gmail.com>

 * hopefully fixed SoundTouch Test in configure.ac

2005-02-26  Richard Spindler <richard.spindler AT gmail.com>

 * added Undo-Redo for Envelope Editing
 * some fixes for configure.ac (Beware, requires soundtouch.m4 to be found by
 aclocal when ./reconf is run)
 * some more fixes for configure.ac regarding wxWin

2005-02-23  Richard Spindler <richard.spindler AT gmail.com>

 * more Improvements to Sample Editor

2005-02-22  Richard Spindler <richard.spindler AT gmail.com>

 * redesigned SoundManager
 * Improvements to Sample Editor

2005-02-19  Georg E Schneider <georg AT georgs.org>

 * Corrected spec - file