@@ -1,4 +1,6 @@
-2005-05-07  Richard Spindler <richard.spindler AT gmail.com>
+2005-05-08  Richard Spindler <richard.spindler AT gmail.com>
+
+ * fixed endless loop in import package
 
 2005-05-06  Richard Spindler <richard.spindler AT gmail.com>
 
